[FIX] VerilatorPlugin: Correct project reference in csproj

--- a/src/Plugins/VerilatorPlugin/VerilatorPlugin.csproj
+++ b/src/Plugins/VerilatorPlugin/VerilatorPlugin.csproj
@@ -70,7 +70,10 @@
       <Project>{5F87C357-09FB-4F53-BE37-41FE5BD88957}</Project>
       <Name>Migrant</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Infrastructure\src\Emulator\Cores\cores-riscv.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\src\Emulator\Cores\cores-riscv.csproj">
+      <Project>{63222124-707C-5EFD-8289-2728351FB7E9}</Project>
+      <Name>cores-riscv</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Connection\" />
