[#30303] Add the execution tracer module

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -73,3 +73,4 @@
 - tests/unit-tests/big-endian-watchpoint.robot
 - tests/unit-tests/memory-invalidation.robot
 - tests/unit-tests/opcodes-counting.robot
+- tests/unit-tests/execution-tracing.robot
