[#26697] Add support for per-core peripheral registration

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -74,3 +74,4 @@
 - tests/unit-tests/memory-invalidation.robot
 - tests/unit-tests/opcodes-counting.robot
 - tests/unit-tests/execution-tracing.robot
+- tests/unit-tests/per-core-registration.robot
