[#31705] tests: Add test for Thumb state exposure in CPSR on ARM

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -77,3 +77,4 @@
 - tests/unit-tests/execution-tracing.robot
 - tests/unit-tests/per-core-registration.robot
 - tests/unit-tests/it-status.robot
+- tests/unit-tests/arm-thumb.robot
