[#31705] tests: Add it-status.robot to test list
This test was missed in d2844bb0045736a51c1986b6123a200a375e9265.

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -76,3 +76,4 @@
 - tests/unit-tests/opcodes-counting.robot
 - tests/unit-tests/execution-tracing.robot
 - tests/unit-tests/per-core-registration.robot
+- tests/unit-tests/it-status.robot
