--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -77,3 +77,4 @@
 - tests/unit-tests/it-status.robot
 - tests/unit-tests/arm-thumb.robot
 - tests/unit-tests/emulation-mode.robot
+- tests/unit-tests/tb_overwrite.robot
