[#32667] Add trivial test for opening host PTY

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -79,3 +79,4 @@
 - tests/unit-tests/emulation-mode.robot
 - tests/unit-tests/tb_overwrite.robot
 - tests/tools/sel4_extensions.robot
+- tests/unit-tests/host-uart.robot
