[#33308] tools: Add tests for seL4 extensions

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -78,3 +78,4 @@
 - tests/unit-tests/arm-thumb.robot
 - tests/unit-tests/emulation-mode.robot
 - tests/unit-tests/tb_overwrite.robot
+- tests/tools/sel4_extensions.robot
