[#32516] Add the external_mmu robot tests

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -80,3 +80,4 @@
 - tests/unit-tests/tb_overwrite.robot
 - tests/tools/sel4_extensions.robot
 - tests/unit-tests/host-uart.robot
+- tests/unit-tests/external-mmu.robot
