[#35510] Add a script and a test for SLTB004A

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -83,3 +83,4 @@
 - tests/unit-tests/external-mmu.robot
 - tests/unit-tests/file-paths.robot
 - tests/platforms/PolarFireSoC.robot
+- tests/platforms/SLTB004A.robot
