[DEV] Add Ambiq Apollo4 test suite

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -85,3 +85,4 @@
 - tests/unit-tests/file-paths.robot
 - tests/platforms/PolarFireSoC.robot
 - tests/platforms/SLTB004A.robot
+- tests/platforms/ambiq-apollo4.robot
