[#37033] Add STM32L072 Zephyr shell_module demo and test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -88,3 +88,4 @@
 - tests/platforms/SLTB004A.robot
 - tests/platforms/ambiq-apollo4.robot
 - tests/unit-tests/non-blockng-step.robot
+- tests/platforms/STM32L072.robot
