[#36893] riscv: Fix PMP implementation
* Fix PMP_AMATCH_OFF
* Propagate PMP privs to TLB pages

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -92,3 +92,4 @@
 - tests/platforms/ambiq-apollo4.robot
 - tests/unit-tests/non-blockng-step.robot
 - tests/platforms/STM32L072.robot
+- tests/unit-tests/hifive1-pmp.robot
