--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -93,3 +93,4 @@
 - tests/unit-tests/non-blockng-step.robot
 - tests/platforms/STM32L072.robot
 - tests/unit-tests/hifive1-pmp.robot
+- tests/unit-tests/real-time-clock-mode.robot
