--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -94,3 +94,4 @@
 - tests/platforms/STM32L072.robot
 - tests/unit-tests/hifive1-pmp.robot
 - tests/unit-tests/real-time-clock-mode.robot
+- tests/platforms/MAX32650.robot
