[#37360] IOMMU: Implement feature and add tests

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -86,6 +86,7 @@
 - tests/tools/sel4_extensions.robot
 - tests/unit-tests/host-uart.robot
 - tests/unit-tests/external-mmu.robot
+- tests/unit-tests/iommu.robot
 - tests/unit-tests/file-paths.robot
 - tests/platforms/PolarFireSoC.robot
 - tests/platforms/SLTB004A.robot
