--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -95,3 +95,4 @@
 - tests/unit-tests/hifive1-pmp.robot
 - tests/unit-tests/real-time-clock-mode.robot
 - tests/platforms/MAX32650.robot
+- tests/unit-tests/pmp.robot
