[#41118] example.robot: Move to tests/, add to test list

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -4,6 +4,7 @@
 - tests/unit-tests/RenodeTests/RenodeTests.csproj
 - lib/options-parser/OptionsParserTests.csproj
 
+- tests/example.robot
 - tests/platforms/CC2538/cc2538_cryptoprocessor.robot
 - tests/platforms/QuarkC1000/QuarkC1000.robot
 - tests/unit-tests/llvm-disassemble.robot
