--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -70,6 +70,7 @@
 - tests/platforms/GR716.robot
 - tests/platforms/MPC5567.robot
 - tests/platforms/xtensa.robot
+- tests/platforms/zynq-7000.robot
 - tests/unit-tests/InterruptHooks/arm-m.robot
 - tests/unit-tests/arm-cortex-m-fpu.robot
 - tests/unit-tests/log-tests.robot
