--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -98,3 +98,4 @@
 - tests/unit-tests/real-time-clock-mode.robot
 - tests/platforms/MAX32650.robot
 - tests/unit-tests/pmp.robot
+- tests/peripherals/SPIMultiplexer.robot
