[#41969] Add support for Monitor commands in hooks

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -99,3 +99,4 @@
 - tests/platforms/MAX32650.robot
 - tests/unit-tests/pmp.robot
 - tests/peripherals/SPIMultiplexer.robot
+- tests/unit-tests/hooks.robot
