[#41193] Cortex-M: Reimplement MPU

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -18,6 +18,7 @@
 - tests/unit-tests/demos.robot
 - tests/unit-tests/robot-integration.robot
 - tests/unit-tests/riscv-unit-tests.robot
+- tests/unit-tests/mpu.robot
 - tests/platforms/SAME70.robot
 - tests/platforms/Murax.robot
 - tests/unit-tests/monitor-tests.robot
