[GH#441] riscv: Fix handling of the c.ebreak instruction

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -101,3 +101,4 @@
 - tests/unit-tests/pmp.robot
 - tests/peripherals/SPIMultiplexer.robot
 - tests/unit-tests/hooks.robot
+- tests/unit-tests/riscv-ebreak.robot
