--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -102,3 +102,4 @@
 - tests/peripherals/SPIMultiplexer.robot
 - tests/unit-tests/hooks.robot
 - tests/unit-tests/riscv-ebreak.robot
+- tests/platforms/ARMv8A.robot
