[#43059] RenodeTests: Include `properties.csproj` in csproj

--- a/tests/unit-tests/RenodeTests/RenodeTests.csproj
+++ b/tests/unit-tests/RenodeTests/RenodeTests.csproj
@@ -10,7 +10,9 @@
     <RootNamespace>Antmicro.Renode.UnitTests</RootNamespace>
     <AssemblyName>RenodeTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <PropertiesLocation>..\..\..\output\properties.csproj</PropertiesLocation>
   </PropertyGroup>
+  <Import Project="$(PropertiesLocation)" />
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <LangVersion>7</LangVersion>
     <DebugSymbols>true</DebugSymbols>
