--- a/tests/unit-tests/RenodeTests/RenodeTests_NET.csproj
+++ b/tests/unit-tests/RenodeTests/RenodeTests_NET.csproj
@@ -3,7 +3,9 @@
     <TargetFrameworks Condition="$(OS) != 'Windows_NT'">net6.0</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">net6.0-windows10.0.17763.0</TargetFrameworks>
     <AssemblyName>RenodeTests</AssemblyName>
+    <PropertiesLocation>..\..\..\output\properties.csproj</PropertiesLocation>
   </PropertyGroup>
+  <Import Project="$(PropertiesLocation)" />
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
