[#43811] RobotFrameworkEngine: Add LED tester keywords

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -109,6 +109,7 @@
     <Compile Include="RobotFrameworkEngine\HelperExtensions.cs" />
     <Compile Include="RobotFrameworkEngine\LogTester.cs" />
     <Compile Include="RobotFrameworkEngine\CpuKeywords.cs" />
+    <Compile Include="RobotFrameworkEngine\LedKeywords.cs" />
     <Compile Include="Network\RangeLossMediumFunction.cs" />
     <Compile Include="Network\RangeMediumFunction.cs" />
     <Compile Include="Backends\Terminals\UartPtyTerminal.cs" />
