--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -103,4 +103,5 @@
 - tests/unit-tests/hooks.robot
 - tests/unit-tests/riscv-ebreak.robot
 - tests/platforms/ARMv8A.robot
+- tests/platforms/ARMv8R.robot
 - tests/peripherals/NRF52840_GPIO.robot
