--- a/src/Renode/Renode_NET.csproj
+++ b/src/Renode/Renode_NET.csproj
@@ -9,6 +9,8 @@
     <StartupObject>Antmicro.Renode.Program</StartupObject>
     <AssemblyName>Renode</AssemblyName>
     <PropertiesLocation>..\..\output\properties.csproj</PropertiesLocation>
+  </PropertyGroup>
+  <PropertyGroup Condition=" $(PORTABLE) == 'true' ">
     <PublishSingleFile>true</PublishSingleFile>
     <UseAppHost>true</UseAppHost>
     <IncludeNativeLibrariesInSingleFile>true</IncludeNativeLibrariesInSingleFile>
