[#45214] Add nucleo_wba52cg.robot to tests.yaml

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -105,3 +105,4 @@
 - tests/platforms/ARMv8A.robot
 - tests/platforms/ARMv8R.robot
 - tests/peripherals/NRF52840_GPIO.robot
+- tests/platforms/nucleo_wba52cg.robot
