[#44767] tlib: Fix tlib_clear_page_io_accessed address removal

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -106,3 +106,4 @@
 - tests/platforms/ARMv8R.robot
 - tests/peripherals/NRF52840_GPIO.robot
 - tests/platforms/nucleo_wba52cg.robot
+- tests/unit-tests/page-access-via-io.robot
