[#44766] tests.yaml: Add peripheral-hooks.robot
A while back (684f44ef7) I added this test, but forgot to update tests.yaml.

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -108,3 +108,4 @@
 - tests/platforms/nucleo_wba52cg.robot
 - tests/unit-tests/page-access-via-io.robot
 - tests/unit-tests/precise-pause.robot
+- tests/unit-tests/peripheral-hooks.robot
