[DEV] Move precise pausing tests to precise-pause.robot

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -107,3 +107,4 @@
 - tests/peripherals/NRF52840_GPIO.robot
 - tests/platforms/nucleo_wba52cg.robot
 - tests/unit-tests/page-access-via-io.robot
+- tests/unit-tests/precise-pause.robot
