[#48851] Add UART keywords tests

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -110,3 +110,4 @@
 - tests/unit-tests/precise-pause.robot
 - tests/unit-tests/peripheral-hooks.robot
 - tests/platforms/xilinx_zynqmp_r5.robot
+- tests/unit-tests/uart-tester.robot
