[#47434] tests: Add ARMv8A-Linux.robot

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -111,3 +111,4 @@
 - tests/unit-tests/peripheral-hooks.robot
 - tests/platforms/xilinx_zynqmp_r5.robot
 - tests/unit-tests/uart-tester.robot
+- tests/platforms/ARMv8A-Linux.robot
