[#47291] Add SHT45 sensor model

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -113,3 +113,4 @@
 - tests/platforms/xilinx_zynqmp_r5.robot
 - tests/unit-tests/uart-tester.robot
 - tests/platforms/ARMv8A-Linux.robot
+- tests/peripherals/SHT45.robot
