[#47297] BME280: Add the sensor model

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -114,3 +114,4 @@
 - tests/unit-tests/uart-tester.robot
 - tests/platforms/ARMv8A-Linux.robot
 - tests/peripherals/SHT45.robot
+- tests/peripherals/BME280.robot
