--- a/src/Renode/Renode_NET.csproj
+++ b/src/Renode/Renode_NET.csproj
@@ -38,9 +38,9 @@
     <ProjectReference Include="..\..\lib\Migrant\Migrant\Migrant_NET.csproj"/>
     <ProjectReference Include="..\Infrastructure\src\Emulator\Extensions\Extensions_NET.csproj"/>
     <ProjectReference Include="..\..\lib\options-parser\OptionsParser_NET.csproj"/>
-    <ProjectReference Include="..\..\lib\xwt\Xwt\Xwt_NET.csproj"/>
-    <ProjectReference Include="..\..\lib\xwt\Xwt.Gtk\Xwt.Gtk3_NET.csproj" Condition=" $(OS) != 'Windows_NT' And $(GUI_DISABLED) != 'true' "/>
-    <ProjectReference Include="..\..\lib\xwt\Xwt.WPF\Xwt.WPF_NET.csproj" Condition=" $(OS) == 'Windows_NT' And $(GUI_DISABLED) != 'true' "/>
+    <ProjectReference Include="..\..\lib\termsharp\xwt\Xwt\Xwt_NET.csproj"/>
+    <ProjectReference Include="..\..\lib\termsharp\xwt\Xwt.Gtk\Xwt.Gtk3_NET.csproj" Condition=" $(OS) != 'Windows_NT' And $(GUI_DISABLED) != 'true' "/>
+    <ProjectReference Include="..\..\lib\termsharp\xwt\Xwt.WPF\Xwt.WPF_NET.csproj" Condition=" $(OS) == 'Windows_NT' And $(GUI_DISABLED) != 'true' "/>
     <ProjectReference Include="..\..\lib\termsharp\TermSharp-working_copy_NET.csproj"/>
     <ProjectReference Include="..\Infrastructure\src\Emulator\Cores\cores-arm_NET.csproj"/>
     <ProjectReference Include="..\Infrastructure\src\Emulator\Cores\cores-arm-m_NET.csproj"/>
