[#48919] stm32: Fix Ethernet transmission with new HAL

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -116,3 +116,4 @@
 - tests/peripherals/SHT45.robot
 - tests/peripherals/BME280.robot
 - tests/peripherals/MB85RC1MT.robot
+- tests/platforms/nucleo_f429zi.robot
