--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -113,6 +113,7 @@
 - tests/unit-tests/precise-pause.robot
 - tests/unit-tests/peripheral-hooks.robot
 - tests/platforms/xilinx_zynqmp_r5.robot
+- tests/platforms/zynqmp.robot
 - tests/unit-tests/uart-tester.robot
 - tests/platforms/ARMv8A-Linux.robot
 - tests/peripherals/SHT45.robot
