[#50836] execution_tracer_reader: Create Robot test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -122,3 +122,4 @@
 - tests/platforms/nucleo_f429zi.robot
 - tests/peripherals/SynopsysDWCEthernetQualityOfService.robot
 - tests/unit-tests/ARMv8R_TCM.robot
+- tests/tools/execution_tracer_reader.robot
