--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -4,5 +4,6 @@ requests==2.27.1
 psutil==5.9.3
 pyyaml==6.0
 
-# Include dependencies of csv2resd as it's used in robot tests
+# Include dependencies of tools as it's used in robot tests
 -r ../tools/csv2resd/requirements.txt
+-r ../tools/execution_tracer/requirements.txt
