[#50611] LIS2DW12: Add multi-frequency test cases

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -124,3 +124,4 @@
 - tests/peripherals/SynopsysDWCEthernetQualityOfService.robot
 - tests/unit-tests/ARMv8R_TCM.robot
 - tests/tools/execution_tracer_reader.robot
+- tests/peripherals/LIS2DW12.robot
