--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -126,3 +126,4 @@
 - tests/tools/execution_tracer_reader.robot
 - tests/peripherals/LIS2DW12.robot
 - tests/unit-tests/arm-performance-monitoring-unit.robot
+- tests/peripherals/ARM_GenericInterruptController.robot
