[#51885] TranslationCPU: Add hook on WFI state change

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -128,3 +128,4 @@
 - tests/unit-tests/arm-performance-monitoring-unit.robot
 - tests/peripherals/ARM_GenericInterruptController.robot
 - tests/platforms/Versatile.robot
+- tests/unit-tests/arm-wfi-hook.robot
