--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -127,3 +127,4 @@
 - tests/peripherals/LIS2DW12.robot
 - tests/unit-tests/arm-performance-monitoring-unit.robot
 - tests/peripherals/ARM_GenericInterruptController.robot
+- tests/platforms/Versatile.robot
