[#51656] Add Renesas_RA6M5 platform test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -129,3 +129,4 @@
 - tests/peripherals/ARM_GenericInterruptController.robot
 - tests/platforms/Versatile.robot
 - tests/unit-tests/arm-wfi-hook.robot
+- tests/platforms/Renesas_RA6M5.robot
