[#51713] ICP_101xx: Add Pressure and Temperature logic

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -132,3 +132,4 @@
 - tests/platforms/Versatile.robot
 - tests/unit-tests/arm-wfi-hook.robot
 - tests/platforms/Renesas_RA6M5.robot
+- tests/peripherals/ICP_101xx.robot
