--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -133,3 +133,4 @@
 - tests/platforms/Renesas_RA6M5.robot
 - tests/peripherals/ICP_101xx.robot
 - tests/unit-tests/grammar-number-separator.robot
+- tests/peripherals/PL330_DMA.robot
