--- a/src/Renode/Renode_NET.csproj
+++ b/src/Renode/Renode_NET.csproj
@@ -8,6 +8,7 @@
     <StartupObject>Antmicro.Renode.Program</StartupObject>
     <AssemblyName>Renode</AssemblyName>
     <PropertiesLocation>..\..\output\properties.csproj</PropertiesLocation>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" $(PORTABLE) == 'true' ">
     <PublishSingleFile>true</PublishSingleFile>
