--- a/src/Renode/Renode_NET.csproj
+++ b/src/Renode/Renode_NET.csproj
@@ -7,6 +7,7 @@
     <OutputType>Exe</OutputType>
     <StartupObject>Antmicro.Renode.Program</StartupObject>
     <AssemblyName>Renode</AssemblyName>
+    <RollForward>Major</RollForward>
     <PropertiesLocation>..\..\output\properties.csproj</PropertiesLocation>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
