--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -132,3 +132,4 @@
 - tests/unit-tests/arm-wfi-hook.robot
 - tests/platforms/Renesas_RA6M5.robot
 - tests/peripherals/ICP_101xx.robot
+- tests/unit-tests/grammar-number-separator.robot
