--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -131,6 +131,7 @@
 - tests/platforms/Versatile.robot
 - tests/unit-tests/arm-wfi-hook.robot
 - tests/platforms/Renesas_RA6M5.robot
+- tests/platforms/Renesas_RA4M1.robot
 - tests/peripherals/ICP_101xx.robot
 - tests/unit-tests/grammar-number-separator.robot
 - tests/peripherals/PL330_DMA.robot
