[#53655] Add EK-RA2E1 platform test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -137,3 +137,4 @@
 - tests/peripherals/PL330_DMA.robot
 - tests/platforms/GR712RC.robot
 - tests/platforms/nucleo_h753zi.robot
+- tests/platforms/EK-RA2E1.robot
