--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -132,6 +132,7 @@
 - tests/unit-tests/arm-wfi-hook.robot
 - tests/platforms/Renesas_RA6M5.robot
 - tests/platforms/Renesas_RA4M1.robot
+- tests/platforms/Renesas_DA14592.robot
 - tests/peripherals/ICP_101xx.robot
 - tests/unit-tests/grammar-number-separator.robot
 - tests/peripherals/PL330_DMA.robot
