--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -61,6 +61,7 @@
 - tests/peripherals/MC3635.robot
 - tests/peripherals/MCAN.robot
 - tests/peripherals/HS3001.robot
+- tests/peripherals/DA16200.robot
 - tests/unit-tests/AdHocCompiler/adhoc-compiler.robot
 - tests/platforms/OpenTitan-EarlGrey.robot
 - tests/platforms/Arnold.robot
