--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -133,6 +133,7 @@
 - tests/unit-tests/arm-wfi-hook.robot
 - tests/platforms/Renesas_RA6M5.robot
 - tests/platforms/Renesas_RA4M1.robot
+- tests/platforms/Renesas_RA8M1.robot
 - tests/platforms/Renesas_DA14592.robot
 - tests/peripherals/ICP_101xx.robot
 - tests/unit-tests/grammar-number-separator.robot
