[#55803] tools: Add dts2repl as submodule
Signed-off-by: Franciszek Zdobylak <fzdobylak@antmicro.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,6 @@
 [submodule "lib/bc-csharp"]
 	path = lib/bc-csharp
 	url = https://github.com/antmicro/bc-csharp.git
+[submodule "tools/dts2repl"]
+	path = tools/dts2repl
+	url = https://github.com/antmicro/dts2repl.git
