[#54741] Add S32K3XX_FlexCAN
Co-authored-by: Wojciech Meller <wmeller@antmicro.com>

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -146,3 +146,4 @@
 - tests/platforms/nucleo_h753zi.robot
 - tests/platforms/EK-RA2E1.robot
 - tests/peripherals/UT32_CAN.robot
+- tests/peripherals/S32K3XX_FlexCAN.robot
