--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -14,6 +14,7 @@
 - tests/unit-tests/sysbus.robot
 - tests/platforms/SiFive-FE310/SiFive-FE310.robot
 - tests/platforms/SiFive-FU540.robot
+- tests/platforms/SiFive-FU740.robot
 - tests/platforms/PicoSoC.robot
 - tests/platforms/MiV/MiV.robot
 - tests/platforms/STM32F103.robot
