[#56247] S32K3XX_EMAC.robot: Add TFTP test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -125,6 +125,7 @@
 - tests/peripherals/MB85RC1MT.robot
 - tests/platforms/nucleo_f429zi.robot
 - tests/peripherals/SynopsysDWCEthernetQualityOfService.robot
+- tests/peripherals/S32K3XX_EMAC.robot
 - tests/unit-tests/ARMv8R_TCM.robot
 - tests/tools/execution_tracer_reader.robot
 - tests/peripherals/LIS2DW12.robot
