--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,7 +1,7 @@
 robotframework==6.0.2
 robotframework-retryfailed==0.2.0
 psutil==5.9.3
-pyyaml==6.0
+pyyaml==6.0.*
 
 # Include dependencies of tools as it's used in robot tests
 -r ../tools/csv2resd/requirements.txt
