[#59213] tests: Add Armv8-R HiRTOS-based tests

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -113,6 +113,7 @@
 - tests/platforms/ARMv8A.robot
 - tests/platforms/ARMv8R.robot
 - tests/platforms/ARMv8R-PMSA.robot
+- tests/platforms/ARMv8R-HiRTOS.robot
 - tests/platforms/ARMv8M.robot
 - tests/peripherals/NRF52840_GPIO.robot
 - tests/platforms/nucleo_wba52cg.robot
