[#50762] VirtIO: Add VirtIOFSDevice, add VirtIO tests for Linux

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -150,3 +150,4 @@
 - tests/peripherals/S32K3XX_FlexCAN.robot
 - tests/platforms/BeagleV-StarLight.robot
 - tests/unit-tests/virtual-time.robot
+- tests/peripherals/VirtIO.robot
