[#59373] Machine: Improve sychronization of scheduled action calls

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -149,3 +149,4 @@
 - tests/peripherals/UT32_CAN.robot
 - tests/peripherals/S32K3XX_FlexCAN.robot
 - tests/platforms/BeagleV-StarLight.robot
+- tests/unit-tests/virtual-time.robot
