[#59393] Test setup for nrf54l15_cpuflpr blinky and hello_world

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -152,3 +152,4 @@
 - tests/unit-tests/virtual-time.robot
 - tests/unit-tests/platform-file-aliases.robot
 - tests/peripherals/VirtIO.robot
+- tests/peripherals/CLIC/CLIC-platform-tests.robot
