[#59551] ExternalControl: Add support for instance based commands

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -135,6 +135,8 @@
     <Compile Include="Network\ExternalControl\Response.cs" />
     <Compile Include="Network\ExternalControl\RunFor.cs" />
     <Compile Include="Network\ExternalControl\GetTime.cs" />
+    <Compile Include="Network\ExternalControl\IInstanceBasedCommand.cs" />
+    <Compile Include="Network\ExternalControl\GetMachine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
