--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -152,3 +152,4 @@
 - tests/unit-tests/virtual-time.robot
 - tests/unit-tests/platform-file-aliases.robot
 - tests/peripherals/VirtIO.robot
+- tests/peripherals/CLIC/CLIC-riscv-arch-tests.robot
