--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -153,3 +153,4 @@
 - tests/unit-tests/platform-file-aliases.robot
 - tests/peripherals/VirtIO.robot
 - tests/peripherals/CLIC/CLIC-riscv-arch-tests.robot
+- tests/peripherals/CLIC/CLIC-indirect-csr.robot
