--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -150,4 +150,5 @@
 - tests/peripherals/S32K3XX_FlexCAN.robot
 - tests/platforms/BeagleV-StarLight.robot
 - tests/unit-tests/virtual-time.robot
+- tests/unit-tests/platform-file-aliases.robot
 - tests/peripherals/VirtIO.robot
